--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <header class="container">
         <section class="row contact_information text-center">
             <h1 class="col-12 mb-3 mt-1">Stephen Wenzel</h1>
-            <p class="col-4">(828)734-4555</p>
+            <p class="col-4">828-734-4555</p>
+            <p class="col-4 hello">sawenzel@live.unc.edu</p>
             <!--Don't put your whole address unless explicitly asked to-->
             <p class="col-4">Chapel Hill, NC</p>
-            <p class="col-4 hello">sawenzel@live.unc.edu</p>
         </section>
     </header>
     <main class="container">
@@ -97,26 +97,26 @@
         </section>
         <section class="row activities">
             <h2 class="col-12">Activities</h2>
-            <article class="col-4">
+            <article class="col-12 col-sm-6 text-center">
                 <h3 class="col-12 mb-0"><b>American Red Cross Club of UNC-CH</b></h3>
                     <p class="col-12"><i>Social Media Chair</i>, Member since 2020</p>
             </article>
-            <article class="col-8">
+            <article class="col-12 col-sm-6 text-center">
                 <h3 class="col-12 mb-0"><b>National Eagle Scout Association</b></h3>
                     <p class="col-12">Member since 2016</p>
             </article>
-            <article class="col-4">
+            <article class="col-12 col-sm-6 text-center">
                 <h3 class="col-12 mb-0"><b>Web Development Club of UNC</b></i></h3>
                     <p class="col-12"><i>Project Member</i>, Member since 2020</p>
             </article>
-            <article class="col-8">
+            <article class="col-12 col-sm-6 text-center">
                 <h3 class="col-12 mb-0"><b>UNC Chapel Hill Swim Club</b></h3>
                     <p class="col-12">Member since 2018</p>
             </article>
         </section>
         <section class="row skill">            
             <h2 class="col-12">Skills</h2>
-            <article class="col-6 skills">
+            <article class="col-12 col-sm-6 skills">
                 <ul>                    
                     <li class="col-12 mb-2">Fluorescence microscopy, light microscopy</li>
                     <li class="col-12 mb-2">Fiji Image Processor</li>
@@ -126,7 +126,7 @@
                     --> 
                 </ul>
             </article>
-            <article class="col-6 skills">
+            <article class="col-12 col-sm-6 skills">
                 <ul>
                     <li class="col-12 mb-2">Photography: <i>Portraits, Landscapes</i></li>
                     <li class="col-12 mb-2">Adobe Suite: <i>Photoshop, Lightroom</i></li>
