--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 </head>
 <body class="bg-image" style="background-image: url(Files/microtubules.jpg);">
     <header class="container">
-        <section class="row contact_information text-center">
+        <section class="row contact text-center">
             <h1 class="col-12 mb-3 mt-1">Stephen Wenzel</h1>
-            <p class="col-4">828-734-4555</p>
-            <p class="col-4 hello">sawenzel@live.unc.edu</p>
+            <p class="col-4"><a href="tel:8287344555">828-734-4555</a></p>
+            <p class="col-4 hello"><a href="mailto:sawenzel@live.unc.edu">sawenzel@live.unc.edu</a></p>
             <!--Don't put your whole address unless explicitly asked to-->
             <p class="col-4">Chapel Hill, NC</p>
         </section>
@@ -39,8 +39,8 @@
         </section>
         <section class="row experience">
             <h2 class="col-12">Work Experience</h2>
-            <article class="col-12">
-                <h3 class="col-12 mb-0"><b>Business Owner</b>, <i>Stephen Wenzel Photography</i>, Clyde, NC and Chapel Hill, NC</h3>
+            <article class="col-12 saw">
+                <h3 class="col-12 mb-0"><b>Business Owner</b>, <i><a id="photog_site" href="https://www.stephenwenzelphotography.com/" target="_blank">Stephen Wenzel Photography</a></i>, Clyde, NC and Chapel Hill, NC</h3>
                 <p class="col-12">March 2016 to Current</p>
                 <ul clas="col-12">
                     <li class="col-12">Manages the production and editing of photographs, including but not limited to large scale productions and graduation sessions</li>
@@ -118,9 +118,12 @@
             <h2 class="col-12">Skills</h2>
             <article class="col-12 col-sm-6 skills">
                 <ul>                    
-                    <li class="col-12 mb-2">Fluorescence microscopy, light microscopy</li>
-                    <li class="col-12 mb-2">Fiji Image Processor</li>
-                    <li class="col-12 mb-2">H1 Nuclear Magnetic Resonance Imaging</li>
+                    <li class="col-12 mb-1">Fluorescence and Light Microscopy</li>
+                    <li class="col-12 mb-1">Fiji Image Processor</li>
+                    <li class="col-12 mb-1">UV-Vis and NMR Spectrometry</li>
+                    <li class="col-12 mb-1">Polyacrylamide Gel Electrophoresis (PAGE)</li>                    
+                    <li class="col-12 mb-1">Capillary Electrophoresis (CE)</li>
+                    <li class="col-12 mb-1">Column, Gas, Size Exclusion, Thin-Layer, and High-Performance Liquid Chromatography</li>
                     <!--Only if you are fluent or it is explicitly asked for.
                     <li class="col-12 mb-2">Spanish Language: <i>Intermediate Proficiency</i></li> 
                     --> 
@@ -128,13 +131,17 @@
             </article>
             <article class="col-12 col-sm-6 skills">
                 <ul>
-                    <li class="col-12 mb-2">Photography: <i>Portraits, Landscapes</i></li>
-                    <li class="col-12 mb-2">Adobe Suite: <i>Photoshop, Lightroom</i></li>
+                    <li class="col-12 mb-1">Solvent-Solvent Extraction</li>
+                    <li class="col-12 mb-1">Cyclic Voltammetry</li>
+                    <li class="col-12 mb-1">Isoelecric Focusing</li> 
+                    <li class="col-12 mb-1">Scientific Writing</li>
+                    <li class="col-12 mb-1">Portrait and Landscape Photography</li>
+                    <li class="col-12 mb-1">Adobe Suite: <i>Photoshop, Lightroom</i></li>
+                    <li class="col-12 mb-1">HTML5, CSS3</li>    
                     <!--
                     It's 2021, everyone is expected to have this.
                     <li class="col-12 mb-2">Microsoft Office Suite – <i>Word, Excel, PowerPoint</i></li>
-                    -->
-                    <li class="col-12 mb-2">HTML5, CSS3: <i>Intermediate Proficiency</i></li>                  
+                    --> 
                 </ul>
             </article>
         </section>
