--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-
     <title>Stephen Wenzel</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <!--Google Fonts - Garamond (Regular 400)-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <!-- Links to CSS stylesheets -->
     <link rel="stylesheet" type="text/css" href="styles.css">
-
     <!-- Links to JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -31,8 +32,8 @@
         <section class="row education">
             <h2 class="col-12">Education</h2>
             <article class="col-12">
-                <p class="col-12 mb-0"><b>The University of North Carolina at Chapel Hill</b></p>
-                <p class="col-12 mb-1">B.S. Biology, Minors in Chemistry and Neuroscience (May 2022)</p>
+                <p class="col-12 mb-0"><b><a href="https://www.usnews.com/best-colleges/unc-2974" target="_blank">The University of North Carolina at Chapel Hill</a></b></p>
+                <p class="col-12 mb-1"><a href="https://catalog.unc.edu/undergraduate/programs-study/biology-major-bs/" target="_blank">B.S. Biology</a>, Minors in <a href="https://catalog.unc.edu/undergraduate/programs-study/chemistry-minor/" target="blank">Chemistry</a> and <a href="https://catalog.unc.edu/undergraduate/programs-study/neuroscience-minor/" target="blank">Neuroscience</a> (May 2022)</p>
                 <p class="col-12">Related coursework: <i>Sensation and Perception, Fundamentals of Human Anatomy and Physiology, Molecular Biology and Genetics, Cell and Developmental Biology, Introduction to Biological Chemistry, Introduction to Organic Chemistry II</i></p>
             </article>
         </section>
@@ -49,7 +50,7 @@
                 </ul>
             </article>
             <article class="col-12">
-                <h3 class="col-12 mb-0"><b>Undergraduate Research Assistant</b>, <i>Rogers Lab, Slep Lab</i>, Chapel Hill, NC</h3>
+                <h3 class="col-12 mb-0"><b>Undergraduate Research Assistant</b>, <i><a href="http://rogerslab.unc.edu/" target="blank">Rogers Lab</a>, <a href="http://www.sleplab.org/" target="blank">Slep Lab</a></i>, Chapel Hill, NC</h3>
                 <p class="col-12">August - December 2021</p>
                 <ul clas="col-12">
                     <li class="col-12">Reads and critiques published scientific literature</li>
@@ -59,7 +60,7 @@
                 </ul>
             </article>
             <article class="col-12">
-                <h3 class="col-12 mb-0"><b>Organic Chemistry II Peer Mentor</b>, <i>UNC Chapel Hill Chemistry Department</i>, Chapel Hill, NC</h3>
+                <h3 class="col-12 mb-0"><b>Organic Chemistry II Peer Mentor</b>, <i><a href="https://chem.unc.edu/home/our-department/" target="blank">UNC Chapel Hill Chemistry Department</a></i>, Chapel Hill, NC</h3>
                 <p class="col-12">August - December 2021</p>
                 <ul clas="col-12">
                     <li class="col-12">Produces study aids and supplemental worksheets for students enrolled in CHEM 262</li>
@@ -69,11 +70,12 @@
                 </ul>
             </article>
             <article class="col-12">
-                <h3 class="col-12 mb-0"><b>Medical and Online Assistant</b>, <i>Western Carolina Ear, Nose and Throat</i>, Clyde, NC</h3>
+                <h3 class="col-12 mb-0"><b>Medical and Online Assistant</b>, <i><a href="https://www.wncentdoctors.com/" target="blank">Western Carolina Ear, Nose and Throat</a></i>, Clyde, NC</h3>
                 <p class="col-12">Summer of 2018, 2019, 2021</p>
                 <ul clas="col-12">
                     <li class="col-12">Manages the layout of website content for optimal user experience using HTML and CSS through the Wix website builder</li>
                     <li class="col-12">Creates content via photography, videography, blog posts, and website content in order to maximize public outreach</li>
+                    <li class="col-12">Shadowed otolaryngologists in order to learn about medical and surgical treatment of hearing loss, ear infections, balance disorders, tinnitus, nerve pain, and facial and cranial nerve disorders</li>
                 </ul>
             </article>
             <article class="col-12">
@@ -115,28 +117,32 @@
         </section>
         <section class="row skill">            
             <h2 class="col-12">Skills</h2>
-            <article class="col-12 col-sm-6 skills">
+            <article class="col-12 col-sm-4 skills">
                 <ul>                    
                     <li class="col-12 mb-1">Fluorescence and Light Microscopy</li>
                     <li class="col-12 mb-1">Fiji Image Processor</li>
                     <li class="col-12 mb-1">UV-Vis and NMR Spectrometry</li>
                     <li class="col-12 mb-1">Polyacrylamide Gel Electrophoresis (PAGE)</li>                    
                     <li class="col-12 mb-1">Capillary Electrophoresis (CE)</li>
-                    <li class="col-12 mb-1">Column, Gas, Size Exclusion, Thin-Layer, and High-Performance Liquid Chromatography</li>
                     <!--Only if you are fluent or it is explicitly asked for.
                     <li class="col-12 mb-2">Spanish Language: <i>Intermediate Proficiency</i></li> 
                     --> 
                 </ul>
             </article>
-            <article class="col-12 col-sm-6 skills">
+            <article class="col-12 col-sm-4 skills">
                 <ul>
+                    <li class="col-12 mb-1">Column, Gas, Size Exclusion, Thin-Layer, and High-Performance Liquid Chromatography</li>
                     <li class="col-12 mb-1">Solvent-Solvent Extraction</li>
                     <li class="col-12 mb-1">Cyclic Voltammetry</li>
-                    <li class="col-12 mb-1">Isoelecric Focusing</li> 
+                    <li class="col-12 mb-1">Isoelecric Focusing</li>
+                </ul>
+            </article>
+            <article class="col-12 col-sm-4 skills">
+                <ul>
                     <li class="col-12 mb-1">Scientific Writing</li>
                     <li class="col-12 mb-1">Portrait and Landscape Photography</li>
                     <li class="col-12 mb-1">Adobe Suite: <i>Photoshop, Lightroom</i></li>
-                    <li class="col-12 mb-1">HTML5, CSS3</li>    
+                    <li class="col-12 mb-1">HTML5, CSS3</li>       
                     <!--
                     It's 2021, everyone is expected to have this.
                     <li class="col-12 mb-2">Microsoft Office Suite – <i>Word, Excel, PowerPoint</i></li>
