--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </article>
             <article class="col-12 col-sm-12 col-md-6 col-lg-6 box">
                 <img class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Unable to access image functionalities')">
-                <p class="col-12 col-sm-12 col-lg-12 text-center"><i>An aspiring ophthalmologist with an eye for photography</i></p>
+                <p class="col-12 col-sm-12 col-lg-12 text-center"><i>An aspiring ophthalmologist with an eye for photography.</i></p>
             </article>
         </section>
     </header>
